fix-right-list-aligned

--- a/style.css
+++ b/style.css
@@ -86,23 +86,27 @@ img {
 .logo {
   box-shadow: none;
 }
-.footer1{
+.footer1 {
   width: 100%;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
   align-items: center;
-
 }
-.SPORTS{
+.SPORTS {
   width: 80%;
   margin: 20px 50px;
 }
-.BUSINESS-ECONOMY{
-width: 80%;
-margin: 20px 50px;
-} 
-.WORLD{
+.BUSINESS-ECONOMY {
   width: 80%;
   margin: 20px 50px;
+}
+.WORLD {
+  width: 80%;
+  margin: 20px 50px;
+}
+.list-right {
+  list-style-position: inside;
+  text-align: left;
+  padding: 10px;
 }
